# hcloud-rust

./: .gitignore  .openapi-generator-ignore  COPYRIGHT  Cargo.toml  LICENSE  LICENSE-APACHE  README.md  README.tpl  openapi-generator.yaml  rustfmt.toml
.github/workflows/: build_and_test.yml  release.yml
.openapi-generator/: FILES
examples/: create_delete_servers.rs  create_delete_storage_boxes.rs  find_cheapest_server_type.rs  list_images.rs  list_isos.rs  list_servers.rs  list_storage_box_types.rs  list_zones.rs
generator_files/: .gitignore
script/: config.sh  download_openapi_spec.sh  extract_generator_templates.sh  generate_api_code.sh  generate_templates_diff.sh
scripts/: config.sh  create_sync_branch.sh  download_openapi_spec.sh  extract_generator_templates.sh  generate_api_code.sh  remove_all_comments.sh
src/: config.rs  lib.rs
src/apis/: actions_api.rs  certificates_api.rs  client.rs  configuration.rs  datacenters_api.rs  firewalls_api.rs  floating_ips_api.rs  images_api.rs  isos_api.rs  load_balancer_types_api.rs  load_balancers_api.rs  locations_api.rs  mod.rs  networks_api.rs  placement_groups_api.rs  pricing_api.rs  primary_ips_api.rs  server_types_api.rs  servers_api.rs  ssh_keys_api.rs  storage_box_types_api.rs  storage_boxes_api.rs  volumes_api.rs  zones_api.rs
src/models/: action.rs  action_optional.rs  action_with_optional_error.rs  add_records_to_rrset_request.rs  add_records_to_rrset_response.rs  add_route_to_network_response.rs  add_server_to_placement_group_request.rs  add_server_to_placement_group_response.rs  add_service_request.rs  add_service_response.rs  add_subnet_to_network_response.rs  add_target_request.rs  add_target_request_ip.rs  add_target_request_label_selector.rs  add_target_request_server.rs  add_target_response.rs  apply_to_resources_request.rs  apply_to_resources_response.rs  architecture.rs  assign_floating_ip_to_server_request.rs  assign_floating_ip_to_server_response.rs  assign_primary_ip_to_resource_request.rs  assign_primary_ip_to_resource_response.rs  attach_iso_to_server_request.rs  attach_iso_to_server_response.rs  attach_load_balancer_to_network_request.rs  attach_load_balancer_to_network_response.rs  attach_server_to_network_request.rs  attach_server_to_network_response.rs  attach_volume_to_server_request.rs  attach_volume_to_server_response.rs  certificate.rs  certificate_status.rs  certificate_status_error.rs  change_algorithm_request.rs  change_algorithm_response.rs  change_alias_ips_of_network_request.rs  change_alias_ips_of_network_response.rs  change_floating_ip_protection_request.rs  change_floating_ip_protection_response.rs  (+412 more)
templates/: model.mustache  templates.diff
templates/reqwest/: api.mustache  api_mod.mustache  configuration.mustache
