[package]
name = "hcloud"
version = "0.18.0"                                                        # also set in openapi-generator.yaml and regenerate API code
authors = ["Henning Holm <git@henningholm.de>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Unofficial Rust crate for accessing the Hetzner Cloud API"
repository = "https://github.com/HenningHolmDE/hcloud-rust"
keywords = ["hcloud", "hetzner", "hetzner-cloud"]
categories = ["api-bindings", "web-programming"]

[features]
default = ["default-tls"]
default-tls = ["reqwest/default-tls"]
native-tls = ["reqwest/native-tls"]
native-tls-vendored = ["reqwest/native-tls-vendored"]
rustls-tls = ["reqwest/rustls-tls"]

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_with = "^3.0"
serde_json = "^1.0"
url = "^2.2"

[dependencies.reqwest]
version = "^0.11"
default-features = false
features = ["json", "multipart"]

[dev-dependencies]
rand = "^0.8"
tokio = { version = "^1.0", features = ["macros", "rt-multi-thread"] }
