[package]
name = "hcloud"
version = "0.23.0"                                                        # also set in openapi-generator.yaml and regenerate API code
authors = ["Henning Holm <git@henningholm.de>"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Unofficial Rust crate for accessing the Hetzner Cloud API"
repository = "https://github.com/HenningHolmDE/hcloud-rust"
keywords = ["hcloud", "hetzner", "hetzner-cloud"]
categories = ["api-bindings", "web-programming"]

[features]
default = ["default-tls"]
default-tls = ["reqwest/default-tls"]
native-tls = ["reqwest/native-tls"]
native-tls-vendored = ["reqwest/native-tls-vendored"]
rustls-tls = ["reqwest/rustls-tls"]

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_with = { version = "^3.8", default-features = false, features = [
    "base64",
    "std",
    "macros",
] }
serde_json = "^1.0"
url = "^2.5"
uuid = { version = "^1.8", features = ["serde", "v4"] }
reqwest = { version = "^0.12", default-features = false, features = [
    "charset",
    "http2",
    "json",
    "macos-system-configuration",
    "multipart",
] }

[dev-dependencies]
rand = "^0.9"
tokio = { version = "^1.0", features = ["macros", "rt-multi-thread"] }
